<resources>
    <string name="app_name">Abonents</string>
    <string name="Email">E-mail</string>
    <string name="menu_abonents">Абоненты</string>
    <string name="menu_plans">Тарифы</string>
    <string name="menu_services">Услуги</string>
    <string name="menu_profile">Profile</string>
    <string name="error_loading_text">Ошибка соединения</string>
    <string name="error_loading_button">Повторить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_abonent_fragment">Hello abonent fragment</string>
    <string name="hello_plan_fragment">Hello plan fragment</string>
    <string name="hello_service_fragment">Hello service fragment</string>

    <string name="search_hint">Введите строку</string>
    <!--CreateAbonentFragment-->
    <string name="abonent_name">Имя</string>
    <string name="abonent_lastname">Фамилия</string>
    <string name="abonent_age">Возраст</string>
    <string name="abonent_mobile_number">Номер</string>
    <string name="abonent_plan">Тарифный план</string>
    <string name="abonent_balance">Баланс</string>
    <string name="abonent_adress">Адрес</string>
    <string name="abonent_create_date">Дата регистрации</string>
    <string name="abonent_delete">Удалить</string>
    <string name="abonent_confirm">Применить</string>
    <!--CreatePlanFragment-->
    <string name="plan_name">Название</string>
    <string name="plan_cost">Стоимость</string>
    <string name="plan_services">Услуги</string>
    <string name="plan_add">Добавить</string>
    <!--CreateServiceDialogFragment-->
    <string name="service_create">Создать услугу</string>
    <string name="service_name">Название</string>
    <string name="service_cost">Стоимость</string>
</resources>
