<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--==================================================================================-->
    <!--ProgressBar-->
    <ProgressBar
        android:id="@+id/createServiceProgressBar"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ProgressBar>
    <!--==================================================================================-->
    <TextView
        android:id="@+id/createServiceDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_create"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>
    <!--==================================================================================-->
    <!--Имя-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutServiceName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textInputLayoutFromParent"
        android:layout_marginTop="@dimen/textInputLayoutFromTop"
        android:layout_marginEnd="@dimen/textInputLayoutFromParent"
        android:hint="@string/service_name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createServiceDialogTitle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextServiceName"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="40"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--==================================================================================-->
    <!--Фамилия-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutServiceCost"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textInputLayoutFromParent"
        android:layout_marginTop="@dimen/textInputLayoutFromTop"
        android:layout_marginEnd="@dimen/textInputLayoutFromParent"
        android:hint="@string/service_cost"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutServiceName">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextServiceCost"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--==================================================================================-->
    <!--Кнопка удалить-->
    <Button
        android:id="@+id/serviceDeleteButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textInputLayoutFromParent"
        android:layout_marginEnd="8dp"
        android:text="@string/abonent_delete"
        app:layout_constraintEnd_toStartOf="@id/serviceConfirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutServiceCost">
    </Button>
    <!--==================================================================================-->
    <!--Кнопка применить-->
    <Button
        android:id="@+id/serviceConfirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/abonent_confirm"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/textInputLayoutFromParent"
        android:layout_marginBottom="@dimen/textInputLayoutFromParent"
        app:layout_constraintStart_toEndOf="@id/serviceDeleteButton"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutServiceCost"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>
    <!--==================================================================================-->
</androidx.constraintlayout.widget.ConstraintLayout>