<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--==================================================================================-->
        <!--ProgressBar-->
        <ProgressBar
            android:id="@+id/createPlanProgressBar"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:visibility="gone"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </ProgressBar>
        <!--==================================================================================-->
        <!--Название-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPlanName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textInputLayoutFromParent"
            android:layout_marginTop="@dimen/textInputLayoutFromTop"
            android:layout_marginEnd="@dimen/textInputLayoutFromParent"
            android:hint="@string/plan_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPlanName"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--==================================================================================-->
        <TextView
            android:id="@+id/createPlanPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textInputLayoutFromTop"
            android:text="@string/plan_services"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPlanName" />
        <!--==================================================================================-->
        <!--Список услуг-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPlanServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textInputLayoutFromParent"
            android:layout_marginEnd="@dimen/textInputLayoutFromParent"
            app:layout_constraintTop_toBottomOf="@id/createPlanPlan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </androidx.recyclerview.widget.RecyclerView>
        <!--==================================================================================-->
        <!--Кнопка удалить-->
        <Button
            android:id="@+id/planAddButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plan_add"
            android:layout_marginStart="@dimen/textInputLayoutFromParent"
            android:layout_marginEnd="@dimen/textInputLayoutFromParent"
            android:layout_marginBottom="@dimen/textInputLayoutFromParent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewPlanServices">
        </Button>
        <!--==================================================================================-->
        <!--Стоимость-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPlanCost"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textInputLayoutFromParent"
            android:layout_marginTop="@dimen/textInputLayoutFromTop"
            android:layout_marginEnd="@dimen/textInputLayoutFromParent"
            android:hint="@string/plan_cost"
            app:errorEnabled="true"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planAddButton">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPlanCost"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--==================================================================================-->
        <!--Кнопка удалить-->
        <Button
            android:id="@+id/planDeleteButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abonent_delete"
            android:layout_marginStart="@dimen/textInputLayoutFromParent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/textInputLayoutFromParent"
            app:layout_constraintEnd_toStartOf="@id/planConfirmButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPlanCost"
            app:layout_constraintBottom_toBottomOf="parent">
        </Button>
        <!--==================================================================================-->
        <!--Кнопка применить-->
        <Button
            android:id="@+id/planConfirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abonent_confirm"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/textInputLayoutFromParent"
            android:layout_marginBottom="@dimen/textInputLayoutFromParent"
            app:layout_constraintStart_toEndOf="@id/planDeleteButton"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPlanCost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </Button>
        <!--==================================================================================-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

